--- a/nemu/Makefile.git
+++ b/nemu/Makefile.git
@@ -1,8 +1,8 @@
-STU_ID = 161220000
+STU_ID = 2112213
 
 # DO NOT modify the following code!!!
 
-GITFLAGS = -q --author='tracer-ics2017 <tracer@njuics.org>' --no-verify --allow-empty
+GITFLAGS = -q --author='2112213-FSC-NKU <fscdyx888@163.com>' --no-verify --allow-empty
 
 # prototype: git_commit(msg)
 define git_commit
